<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/addForm"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="4dp">

        <EditText
            style="@style/EditText"
            android:id="@+id/add_server_name_txt"
            android:hint="@string/server_name" />

        <LinearLayout
            android:id="@+id/formBlock1"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/add_server_protocol_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="8"
                android:dropDownWidth="wrap_content"
                android:entries="@array/connection_array"
                android:prompt="@string/add_server_protocol" />

            <EditText
                style="@style/EditText"
                android:id="@+id/add_server_address_txt"
                android:hint="@string/server_address" />

        </LinearLayout>

        <EditText
            style="@style/EditText"
            android:id="@+id/add_server_username_txt"
            android:hint="@string/add_server_username" />

        <EditText
            style="@style/EditText"
            android:id="@+id/add_server_password_txt"
            android:hint="@string/add_server_password" />

    </LinearLayout>

</ScrollView>
