<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/voltageTemplate"
    style="@style/InformationBlockBlock">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/voltage_state_normal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/ic_power_good" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textPower1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textPowerDesc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/sensor_status"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textPowerNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/sensor_reading"
        android:textSize="24sp" />

</RelativeLayout>