<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/addForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/serverDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_server_desc"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/serverDesc"
            android:layout_centerHorizontal="true"
            android:text="@string/all_fields_required"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_orange" />

        <LinearLayout
            android:id="@+id/formBlock1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/serverDesc"
            android:paddingBottom="5dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/add_server_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="right"
                android:text="@string/add_server_address" />

            <EditText
                android:id="@+id/ip_address_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:imeOptions="actionNext"
                android:inputType="text|textNoSuggestions" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/formBlock2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/formBlock1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="right"
                android:text="@string/add_server_name" />

            <EditText
                android:id="@+id/serverNameTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="text|textNoSuggestions" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/formBlock3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/formBlock2"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="right"
                android:text="@string/add_server_protocol" />

            <Spinner
                android:id="@+id/serverProtocolSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="8"
                android:entries="@array/connection_array"
                android:prompt="@string/add_server_protocol" />
        </LinearLayout>

        <TextView
            android:id="@+id/credentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/formBlock3"
            android:text="@string/credentials"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/formBlock4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/credentials"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="right"
                android:text="@string/add_server_username" />

            <EditText
                android:id="@+id/usernameTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="8"
                android:imeOptions="actionNext"
                android:inputType="text|textNoSuggestions" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/formBlock5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/formBlock4"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="right"
                android:text="@string/add_server_password" />

            <EditText
                android:id="@+id/pswText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:ems="8"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/formBlock6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/formBlock5"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/backServerBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/back_server_button"
                android:textColor="@color/text_red"
                android:textSize="25sp" />

            <Button
                android:id="@+id/addServerBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/add_server_button"
                android:textColor="@color/text_green"
                android:textSize="25sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>